<resources>
    <string name="app_name">Guia MG</string>
    <string name="title_home">Home</string>
    <string name="title_add_client">Adicionar Cliente</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="add_customer_field_category_hint">Categoria</string>
    <string name="add_customer_field_name_hint">Nome</string>
    <string name="add_customer_field_address_hint">Endereço</string>
    <string name="add_customer_field_phone_hint">Telefone</string>
    <string name="add_customer_field_link_instagran_hint">Link Instagram</string>
    <string name="add_customer_field_link_facebook_hint">Link Facebook</string>
    <string name="add_customer_field_link_maps_hint">Link Maps</string>
    <string name="add_customer_field_description_hint">Descrição</string>
    <string name="button_save">SALVAR</string>
    <string name="add_customer_field_error">Campo não deve estar vazio!</string>
    <string name="select">Selecionar</string>
    <string name="title_choose_three_categories">Escolha três categorias:</string>
    <string name="title_about">Sobre</string>
    <string name="txt_app_about">App Feito para estudos, com objetivo de fixação e aprimoramento dos conhecimentos adiquiridos no curso White Label ministrado pelo profesor Douglas Motta</string>
    <string name="txt_github_link">https://github.com/weslleyqi0</string>
</resources>