<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addcustomer.AddCustomerFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="?attr/actionBarSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:paddingBottom="32dp">

            <ImageView
                android:id="@+id/image_customer"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/background_customer_image"
                android:importantForAccessibility="no"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_add_a_photo" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_add_customer_name"
                style="@style/TextInputLayoutStyle"
                android:layout_marginTop="8dp"
                app:endIconMode="clear_text"
                app:hintTextAppearance="@style/MyHintTextAppearance"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_customer">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_add_customer_name"
                    style="@style/TextInputLayoutEditText"
                    android:hint="@string/add_customer_field_name_hint"
                    android:imeOptions="actionNext"
                    android:inputType="textCapWords"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_add_customer_description"
                style="@style/TextInputLayoutStyle"
                android:layout_marginTop="8dp"
                app:endIconMode="clear_text"
                app:hintTextAppearance="@style/MyHintTextAppearance"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_layout_add_customer_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_add_customer_description"
                    style="@style/TextInputLayoutEditText"
                    android:hint="@string/add_customer_field_description_hint"
                    android:imeOptions="actionNext"
                    android:inputType="textCapWords" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_add_customer_address"
                style="@style/TextInputLayoutStyle"
                android:layout_marginTop="8dp"
                app:endIconMode="clear_text"
                app:hintTextAppearance="@style/MyHintTextAppearance"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_layout_add_customer_description">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_add_customer_address"
                    style="@style/TextInputLayoutEditText"
                    android:hint="@string/add_customer_field_address_hint"
                    android:imeOptions="actionNext"
                    android:inputType="textCapWords" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_add_customer_phone"
                style="@style/TextInputLayoutStyle"
                android:layout_marginTop="8dp"
                app:endIconMode="clear_text"
                app:hintTextAppearance="@style/MyHintTextAppearance"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_layout_add_customer_address">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_add_customer_phone"
                    style="@style/TextInputLayoutEditText"
                    android:hint="@string/add_customer_field_phone_hint"
                    android:imeOptions="actionNext"
                    android:inputType="phone" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_add_customer_category"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:hintTextAppearance="@style/MyHintTextAppearance"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_layout_add_customer_phone">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/edt_add_customer_category"
                    style="@style/TextInputLayoutEditText"
                    android:clickable="true"
                    android:focusable="false"
                    android:text="Padaria"
                    android:hint="@string/add_customer_field_category_hint"
                    tools:ignore="KeyboardInaccessibleWidget" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_add_customer_link_instagram"
                style="@style/TextInputLayoutStyle"
                android:layout_marginTop="8dp"
                app:endIconMode="clear_text"
                app:hintTextAppearance="@style/MyHintTextAppearance"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_layout_add_customer_category">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_add_customer_link_instagram"
                    style="@style/TextInputLayoutEditText"
                    android:hint="@string/add_customer_field_link_instagran_hint"
                    android:imeOptions="actionNext"
                    android:inputType="textCapWords" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_add_customer_link_facebook"
                style="@style/TextInputLayoutStyle"
                android:layout_marginTop="8dp"
                app:endIconMode="clear_text"
                app:hintTextAppearance="@style/MyHintTextAppearance"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_layout_add_customer_link_instagram">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_add_customer_link_facebook"
                    style="@style/TextInputLayoutEditText"
                    android:hint="@string/add_customer_field_link_facebook_hint"
                    android:imeOptions="actionNext"
                    android:inputType="textCapWords" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_add_customer_link_maps"
                style="@style/TextInputLayoutStyle"
                android:layout_marginTop="8dp"
                app:endIconMode="clear_text"
                app:hintTextAppearance="@style/MyHintTextAppearance"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_layout_add_customer_link_facebook">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_add_customer_link_maps"
                    style="@style/TextInputLayoutEditText"
                    android:hint="@string/add_customer_field_link_maps_hint"
                    android:imeOptions="actionNext"
                    android:inputType="textCapWords" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/input_layout_add_customer_link_maps"
                tools:layout_editor_absoluteX="16dp">

                <ImageView
                    android:id="@+id/add_image_1"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_marginEnd="2dp"
                    android:background="@drawable/background_customer_image"
                    android:importantForAccessibility="no"
                    android:padding="8dp"
                    android:scaleType="center"
                    app:layout_constraintEnd_toStartOf="@+id/add_image_2"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_add_a_photo" />

                <ImageView
                    android:id="@+id/add_image_2"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    android:background="@drawable/background_customer_image"
                    android:importantForAccessibility="no"
                    android:padding="8dp"
                    android:scaleType="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/add_image_3"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/add_image_1"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_add_a_photo" />

                <ImageView
                    android:id="@+id/add_image_3"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    android:background="@drawable/background_customer_image"
                    android:importantForAccessibility="no"
                    android:padding="8dp"
                    android:scaleType="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/add_image_4"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/add_image_2"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_add_a_photo" />

                <ImageView
                    android:id="@+id/add_image_4"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    android:background="@drawable/background_customer_image"
                    android:importantForAccessibility="no"
                    android:padding="8dp"
                    android:scaleType="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/add_image_5"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/add_image_3"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_add_a_photo" />

                <ImageView
                    android:id="@+id/add_image_5"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="2dp"
                    android:background="@drawable/background_customer_image"
                    android:importantForAccessibility="no"
                    android:padding="8dp"
                    android:scaleType="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/add_image_4"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_add_a_photo" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/button_save_customer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_button"
                android:gravity="center"
                android:padding="18dp"
                android:text="@string/button_save"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
                tools:layout_editor_absoluteX="16dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>